--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -10,3 +10,12 @@
   flex-direction: row;
   padding: 0;
 }
+
+@media screen and (max-width: 480px) {
+  .header {
+    height: 60px;
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid rgba(236, 236, 236, 1);
+  }
+}
