--- a/sass/components/_newsletter.scss
+++ b/sass/components/_newsletter.scss
@@ -1,6 +1,5 @@
 .newsletter {
   width: 570px;
-  height: 86px;
   padding: 0;
   margin-left: 78px;
   border: none;
@@ -74,4 +73,36 @@
   width: 24px;
   height: 24px;
   padding-left: 24px;
+}
+
+@media screen and (max-width: 480px) {
+  .newsletter {
+    padding-top: 60px;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .newsletter__form {
+    display: flex;
+    margin-top: 20px;
+    flex-wrap: wrap;
+  }
+
+  .newsletter__input {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 50px;
+    margin: 0 auto;
+    width: 450px;
+  }
+
+  .mobile-newsletter_button {
+    display: flex;
+    padding-top: 20px;
+    margin: 0 auto;
+    padding-bottom: 60px;
+  }
 }
