--- a/sass/components/_our-advantages.scss
+++ b/sass/components/_our-advantages.scss
@@ -1,4 +1,3 @@
-
 .our-advantages {
   display: flex;
   flex-wrap: wrap;
@@ -6,7 +5,6 @@
   gap: 30px;
   padding: 94px 0;
   list-style-type: none;
-  
 }
 
 .our-advantages__icons {
@@ -17,7 +15,6 @@
   width: 270px;
   height: 120px;
   border-radius: 4px;
-  
 }
 
 .our-advantages__icons--properties {
@@ -31,8 +28,8 @@
   font-size: 14px;
   line-height: 1.17;
   color: var(--black2);
-  width: 270px;
   text-align: left;
+  letter-spacing: 0.03em;
 }
 
 .our-advantages__text {
@@ -43,4 +40,25 @@
   letter-spacing: 0.3px;
   width: 270px;
   height: 75px;
+}
+
+@media screen and (max-width: 480px) {
+  .our-advantages {
+    padding: 60px 0;
+  }
+
+  .our-advantages__icons {
+    width: 450px;
+    height: 120px;
+  }
+
+  .our-advantages__headers {
+    text-align: center;
+  }
+
+  .our-advantages__text {
+    width: 450px;
+    text-align: center;
+    height: 50px;
+  }
 }
