--- a/sass/components/_page-name.scss
+++ b/sass/components/_page-name.scss
@@ -2,6 +2,9 @@
   padding: 24px 93px 25px 0px;
   width: 145px;
   height: 31px;
+    display:flex;
+    flex-direction: center;
+    align-items: center;
 }
 
 .page-name__title {
@@ -34,13 +37,25 @@
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 }
-.page-name__title--white {
-  color: var(--main-white);
 
-  &:hover,
-  &:focus {
-    color: var(--blue);
-    cursor: pointer;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+@media screen and (max-width: 480px) {
+  .page-name {
+    padding: 16px 0px 16px 15px;
+    width: 145px;
+    height: 31px;
+  }
+
+
+  .page-name__title {
+    font-weight: bold;
+    font-weight: 700;
+    font-size: 26px;
+    text-decoration: none;
+    line-height: 1.17;
+    font-family: "Raleway", sans-serif;
+    
+    display:flex;
+    flex-direction: center;
+    align-items: center;
   }
 }
