--- a/sass/main.scss
+++ b/sass/main.scss
@@ -17,3 +17,4 @@
 @import "./components/portfolio-section.scss";
 @import "./components/portfolio-buttons.scss";
 @import "./components/portfolio-projects.scss";
+@import "./components/mobile-menu.scss";
