--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -64,7 +64,6 @@
     justify-content: center;
     width: 154px;
     padding: 0;
-    margin: 0 auto;
   }
 
   .footer__wrapper {
@@ -79,5 +78,8 @@
     justify-content: center;
     align-items: center;
     padding-bottom: 60px;
+  }
+  .page-name__footer {
+    margin: 0 auto;
   }
 }
