--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -9,6 +9,7 @@
     width: 100%;
     transform: translateX(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    z-index: 3;
   }
 
   .mobile-menu__content {
@@ -19,6 +20,7 @@
     height: 100%;
     position: relative;
     background-color: var(--main-white);
+    z-index: 4;
   }
 
   .mobile-menu__open-button {
