--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -1,15 +1,26 @@
 .mobile-menu {
   display: none;
 }
+.mobile-menu__open-button {
+    display: none;
+}
 
 @media screen and (max-width: 480px) {
   .mobile-menu {
-    opacity: 0;
     height: 100%;
     width: 100%;
-    transform: translateX(100%);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    z-index: 3;
+    border-radius: 4px;
+    background-color: var(--main-white);
+    box-shadow: 0px 2px 1px 0px #00000033;
+    box-shadow: 0px 1px 1px 0px #00000024;
+    box-shadow: 0px 1px 3px 0px #0000001f;
+    position: relative;
+    margin: auto;
+    opacity: inherit;
+    visibility: inherit;
+    transition-property: visibility, opacity;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   }
 
   .mobile-menu__content {
@@ -24,6 +35,7 @@
   }
 
   .mobile-menu__open-button {
+    display: block;
     width: 40px;
     height: 40px;
     position: absolute;
