--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -2,10 +2,10 @@
   display: none;
 }
 .mobile-menu__open-button {
-    display: none;
+  display: none;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width:768px) {
   .mobile-menu {
     height: 100%;
     width: 100%;
@@ -39,11 +39,12 @@
     width: 40px;
     height: 40px;
     position: absolute;
-    left: 420px;
+    left: 700px;
     top: 10px;
     border: none;
     color: transparent;
     margin: 0;
+    padding-right: 20px;
     padding: 0;
 
     &:hover,
