--- a/sass/components/_our-advantages.scss
+++ b/sass/components/_our-advantages.scss
@@ -42,13 +42,13 @@
   height: 75px;
 }
 
-@media screen and (max-width:768px) {
+@media screen and (max-width: 768px) {
   .our-advantages {
     padding: 60px 0;
   }
 
   .our-advantages__icons {
-    width: 450px;
+    width: 100%;
     height: 120px;
   }
 
