--- a/sass/utils/_global.scss
+++ b/sass/utils/_global.scss
@@ -13,6 +13,10 @@ a:link {
   width: 1200px;
 }
 
+.d-none {
+  display:none;
+}
+
 @media screen and (max-width: 768px) {
   .container {
     width: 738px;
