--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -1,11 +1,4 @@
-.mobile-menu {
-  display: none;
-}
-.mobile-menu__open-button {
-  display: none;
-}
-
-@media screen and (max-width:768px) {
+@media screen and (max-width: 768px) {
   .mobile-menu {
     height: 100%;
     width: 100%;
@@ -32,6 +25,7 @@
     position: relative;
     background-color: var(--main-white);
     z-index: 4;
+    overflow: hidden;
   }
 
   .mobile-menu__open-button {
@@ -39,7 +33,7 @@
     width: 40px;
     height: 40px;
     position: absolute;
-    left: 700px;
+    right: 20px;
     top: 10px;
     border: none;
     color: transparent;
@@ -74,16 +68,16 @@
   .mobile-menu__content {
     width: 100vw;
     height: 100vw;
+    position: relative;
+    padding: 48px 40px;
   }
 
-  .modal-menu__close-button {
+  .mobile-menu__close-button {
+    width: 45px;
+    height: 45px;
     position: absolute;
-    background-color: var(--main-white);
-    border: none;
-    cursor: pointer;
     right: 25px;
-    top: 21px;
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    top: 12px;
 
     &:hover,
     &:focus {
@@ -91,21 +85,48 @@
     }
   }
 
+  .mobile-menu__close-button--properties {
+    display: flex;
+    padding: 0px;
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
+    border: none;
+    background-color: var(--main-white);
+  }
+
   .mobile-menu__close-button--icon {
     cursor: pointer;
-    background-color: var(--blue);
-    border-style: none;
-    border: 0;
-    border-radius: 4px;
-    width: 200px;
-    height: 50px;
+    background-color: transparent;
+    border: none;
+    width: 30px;
+    height: 30px;
     padding: 0;
-    margin-left: 12px;
   }
 
   .mobile-menu-navigation {
+    list-style-type: none;
   }
 
-  .mobile-menu-navigation__item {
+  .mobile-menu-navigation__pages {
+    display: flex;
+    flex-direction: column;
+    gap: 36px;
   }
+
+  .mobile-menu-navigation__pages--text {
+    font-weight: 500;
+    font-size: 40px;
+    line-height: 1.17;
+    letter-spacing: 0.02em;
+
+
+    &:hover,
+    &:focus {
+      color: var(--blue);
+      cursor:pointer;
+    }
+  }
+
+
 }
