--- a/sass/components/_our-advantages.scss
+++ b/sass/components/_our-advantages.scss
@@ -5,6 +5,7 @@
   gap: 30px;
   padding: 94px 0;
   list-style-type: none;
+  
 }
 
 .our-advantages__icons {
@@ -15,6 +16,7 @@
   width: 270px;
   height: 120px;
   border-radius: 4px;
+  flex-direction: wrap;
 }
 
 .our-advantages__icons--properties {
@@ -30,6 +32,8 @@
   color: var(--black2);
   text-align: left;
   letter-spacing: 0.03em;
+  display: flex;
+  flex-direction: wrap;
 }
 
 .our-advantages__text {
@@ -40,9 +44,11 @@
   letter-spacing: 0.3px;
   width: 270px;
   height: 75px;
+  display: flex;
+  flex-direction: wrap;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width:768px) {
   .our-advantages {
     padding: 60px 0;
   }
