--- a/sass/components/_our-advantages.scss
+++ b/sass/components/_our-advantages.scss
@@ -1,11 +1,25 @@
 .our-advantages {
   display: flex;
-  flex-wrap: wrap;
-  list-style: none;
   gap: 30px;
   padding: 94px 0;
   list-style-type: none;
-  
+  justify-content: center;
+}
+
+.our-advantages__list {
+  display: flex;
+  flex-direction: row;
+  list-style-type: none;
+  width: 100%;
+  flex-wrap: nowrap;
+  justify-content: center;
+  gap: 30px;
+  padding: 0;
+}
+
+.our-advantages__item {
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 .our-advantages__icons {
@@ -16,13 +30,12 @@
   width: 270px;
   height: 120px;
   border-radius: 4px;
-  flex-direction: wrap;
+  flex-wrap: wrap;
 }
 
 .our-advantages__icons--properties {
-  width: 65.32px;
-  height: 70px;
   justify-content: center;
+  flex-wrap: wrap;
 }
 
 .our-advantages__headers {
@@ -33,7 +46,7 @@
   text-align: left;
   letter-spacing: 0.03em;
   display: flex;
-  flex-direction: wrap;
+  flex-wrap: wrap;
 }
 
 .our-advantages__text {
@@ -45,21 +58,40 @@
   width: 270px;
   height: 75px;
   display: flex;
-  flex-direction: wrap;
+  flex-wrap: wrap;
 }
 
-@media screen and (max-width:768px) {
+@media screen and (max-width: 768px) {
   .our-advantages {
     padding: 60px 0;
+    flex-wrap: wrap;
+    justify-content: center;
+    flex-direction: column;
+  }
+
+  .our-advantages__list {
+    flex-direction: column;
+    max-width: 100%;
+    flex-wrap: wrap;
+  }
+
+  .our-advantages__item {
+    max-width: 100%;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
   }
 
   .our-advantages__icons {
     width: 100%;
-    height: 120px;
+    justify-content: center;
+    display: flex;
+    align-items: center;
   }
 
   .our-advantages__headers {
     text-align: center;
+    justify-content: center;
   }
 
   .our-advantages__text {
