--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -1,23 +1,15 @@
 @media screen and (max-width: 768px) {
   .mobile-menu {
-    position: fixed;
     z-index: 4;
-    height: 100%;
-    width: 100%;
+    height: 100vw;
+    width: 100vw  ;
     background-color: var(--main-white);
-    opacity: 0;
-    transition-duration: 250ms;
-  transform: translateX(100%);
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   }
 
   .mobile-menu__content {
-    display: flex;
-    flex-direction: column;
-    opacity: 1;
-    width: 100%;
-    height: 100%;
-    position: relative;
+    width: 100vw;
+    height: 100vw;
+    position: fixed;
     background-color: var(--main-white);
     z-index: 4;
   }
