--- a/sass/components/_customers.scss
+++ b/sass/components/_customers.scss
@@ -24,7 +24,7 @@
   justify-content: center;
   align-items: center;
   border: 1px solid rgba(175, 177, 184, 1);
-  width: 170px;
+  width: 100%;
   height: 92px;
   border-radius: 4px;
 
@@ -43,12 +43,11 @@
 }
 
 .customers__list--icons {
-  width: 106px;
   height: 60px;
   fill: var(--silver);
 }
 
-@media screen and (max-width:768px) {
+@media screen and (max-width: 768px) {
   .customers-section {
     padding: 60px 0;
   }
