--- a/sass/components/_our-advantages.scss
+++ b/sass/components/_our-advantages.scss
@@ -4,6 +4,7 @@
   padding: 94px 0;
   list-style-type: none;
   justify-content: center;
+  width: 100%;
 }
 
 .our-advantages__list {
@@ -27,7 +28,7 @@
   justify-content: center;
   align-items: center;
   background-color: var(--second-white);
-  width: 270px;
+  width: 100%;
   height: 120px;
   border-radius: 4px;
   flex-wrap: wrap;
@@ -55,8 +56,7 @@
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.3px;
-  width: 270px;
-  height: 75px;
+  width: 100%;
   display: flex;
   flex-wrap: wrap;
 }
@@ -67,6 +67,7 @@
     flex-wrap: wrap;
     justify-content: center;
     flex-direction: column;
+    max-width: 768px;
   }
 
   .our-advantages__list {
