--- a/sass/components/_customers.scss
+++ b/sass/components/_customers.scss
@@ -50,7 +50,7 @@
 @media screen and (max-width: 768px) {
   .customers-section {
     padding: 60px 0;
-
+  }
   .customers-section__header {
     font-size: 28px;
     padding-bottom: 30px;
