--- a/sass/components/_our-advantages.scss
+++ b/sass/components/_our-advantages.scss
@@ -67,7 +67,7 @@
     flex-wrap: wrap;
     justify-content: center;
     flex-direction: column;
-    max-width: 768px;
+    max-width: 100%;
   }
 
   .our-advantages__list {
