--- a/sass/components/_customers.scss
+++ b/sass/components/_customers.scss
@@ -47,7 +47,7 @@
   fill: var(--silver);
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 480px) {
   .customers-section {
     padding: 60px 0;
   }
