--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -58,7 +58,7 @@
   }
 }
 
-@media screen and (max-width:768px) {
+@media screen and (min-width: 480px) {
   .page-name {
     display: flex;
     justify-content: center;
