--- a/sass/components/_page-name.scss
+++ b/sass/components/_page-name.scss
@@ -37,7 +37,7 @@
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 480px) {
   .page-name {
     padding: 16px 0px;
     width: 145px;
