--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -11,7 +11,7 @@
   padding: 0;
 }
 
-@media screen and (max-width:768px) {
+@media screen and (min-width:480px) {
   .header {
     height: 60px;
     display: flex;
