--- a/sass/components/_our-advantages.scss
+++ b/sass/components/_our-advantages.scss
@@ -61,7 +61,7 @@
   flex-wrap: wrap;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 480px) {
   .our-advantages {
     padding: 60px 0;
     flex-wrap: wrap;
@@ -72,7 +72,7 @@
 
   .our-advantages__list {
     flex-direction: column;
-    max-width: 100%;
+    width: 100%;
     flex-wrap: wrap;
   }
 
