--- a/sass/components/_segments.scss
+++ b/sass/components/_segments.scss
@@ -51,7 +51,7 @@
   margin: 0;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 320px) {
   .segments {
     display: none;
   }
