--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,5 +1,5 @@
 .header {
-  height: 80px;
+  height: 60px;
   display: flex;
   align-items: center;
   border-bottom: 1px solid rgba(236, 236, 236, 1);
@@ -11,11 +11,14 @@
   padding: 0;
 }
 
-@media screen and (min-width:480px) {
+@media screen and (min-width:1200px) {
   .header {
-    height: 60px;
-    display: flex;
-    align-items: center;
-    border-bottom: 1px solid rgba(236, 236, 236, 1);
-  }
+  height: 80px;
+}
+}
+
+@media screen and (min-width:768px) {
+  .header {
+  height: 80px;
+}
 }
