--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -1,91 +1,92 @@
-.menu {
-  display: flex;
-  flex-direction: row;
-  line-height: 1.17;
-  margin: 32px 0;
-  padding: 0;
-  box-sizing: border-box;
-  list-style-type: none;
-}
-.menu__navigation {
-  margin-right: 345px;
-  gap: 46px;
-  font-weight: 500;
-  color: var(--black2);
-  font-size: 14px;
-  text-decoration: none;
-  line-height: 1.17;
-  letter-spacing: 0.02em;
-}
-
-.menu__address {
-  padding: 32px 0;
-  margin: 0;
-  gap: 30px;
-}
-
-.menu__navigation--text {
-  font-weight: 500;
-  color: var(--black2);
-  font-size: 14px;
-  text-decoration: none;
-  line-height: 1.17;
-  letter-spacing: 0.02em;
-
-  &:hover,
-  &:focus {
-    color: var(--blue);
-    cursor: pointer;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-}
-
-.menu__navigation--underline {
-  position: relative;
-
-  &::after {
-    position: absolute;
-    content: "";
-    background-color: var(--blue);
-    height: 4px;
-    border-radius: 2px;
-    bottom: -28px;
-    left: 0;
-    width: 100%;
-  }
-}
-
-.menu__address--text {
-  font-weight: 500;
-  font-size: 14px;
-  height: 16px;
-  color: var(--silver);
-  text-decoration: none;
-
-  &:hover,
-  &:focus {
-    color: var(--blue);
-    cursor: pointer;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-
-  &:hover svg,
-  &:focus svg {
-    fill: var(--blue);
-    cursor: pointer;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-}
-
-.menu__address--icon {
-  width: 16px;
-  height: 12px;
-  padding-right: 10px;
-  fill: var(--silver);
-}
-
 @media screen and (min-width: 320px) {
   .menu {
     display: none;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .menu {
+    display: flex;
+    flex-direction: row;
+    line-height: 1.17;
+    margin: 32px 0;
+    padding: 0;
+    box-sizing: border-box;
+    list-style-type: none;
+  }
+  .menu__navigation {
+    margin-right: 345px;
+    gap: 46px;
+    font-weight: 500;
+    color: var(--black2);
+    font-size: 14px;
+    text-decoration: none;
+    line-height: 1.17;
+    letter-spacing: 0.02em;
+  }
+
+  .menu__address {
+    padding: 32px 0;
+    margin: 0;
+    gap: 30px;
+  }
+
+  .menu__navigation--text {
+    font-weight: 500;
+    color: var(--black2);
+    font-size: 14px;
+    text-decoration: none;
+    line-height: 1.17;
+    letter-spacing: 0.02em;
+
+    &:hover,
+    &:focus {
+      color: var(--blue);
+      cursor: pointer;
+      transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+  }
+
+  .menu__navigation--underline {
+    position: relative;
+
+    &::after {
+      position: absolute;
+      content: "";
+      background-color: var(--blue);
+      height: 4px;
+      border-radius: 2px;
+      bottom: -28px;
+      left: 0;
+      width: 100%;
+    }
+  }
+
+  .menu__address--text {
+    font-weight: 500;
+    font-size: 14px;
+    height: 16px;
+    color: var(--silver);
+    text-decoration: none;
+
+    &:hover,
+    &:focus {
+      color: var(--blue);
+      cursor: pointer;
+      transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    &:hover svg,
+    &:focus svg {
+      fill: var(--blue);
+      cursor: pointer;
+      transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+  }
+
+  .menu__address--icon {
+    width: 16px;
+    height: 12px;
+    padding-right: 10px;
+    fill: var(--silver);
   }
 }
