--- a/sass/components/_page-name.scss
+++ b/sass/components/_page-name.scss
@@ -1,7 +1,5 @@
 .page-name {
-  padding: 24px 93px 25px 0px;
-  width: 145px;
-  height: 31px;
+  padding: 16px 0px;
   display: flex;
   align-items: center;
 }
@@ -37,10 +35,10 @@
   }
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 1200px) {
   .page-name {
-    padding: 16px 0px;
-    width: 145px;
-    height: 31px;
+    padding: 24px 93px 25px 0px;
+    display: flex;
+    align-items: center;
   }
 }
