--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -62,8 +62,8 @@
   .page-name {
     display: flex;
     justify-content: center;
-    width: 154px;
-    padding: 0;
+    // width: 154px;
+    // padding: 0;
   }
 
   .footer__wrapper {
