--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -3,14 +3,19 @@
   height: 100vw;
   width: 100vw;
   background-color: var(--main-white);
+  position: fixed;
+  top: 0;
+  left: 0;
 }
 
 .mobile-menu__content {
   width: 100vw;
   height: 100vw;
-  position: fixed;
   background-color: var(--main-white);
   z-index: 4;
+  padding: 48px 40px;
+  justify-content: space-around;
+  position: fixed;
   top: 0;
   left: 0;
 }
@@ -50,14 +55,6 @@
   cursor: pointer;
   border: none;
   background-color: var(--main-white);
-}
-
-.mobile-menu__content {
-  width: 100vw;
-  height: 100vw;
-  position: relative;
-  padding: 48px 40px;
-  justify-content: space-around;
 }
 
 .mobile-menu__close-button {
