--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -1,7 +1,7 @@
 .mobile-menu {
   z-index: 4;
-  height: 100vw;
-  width: 100vw;
+  width: 100%;
+  height: 100%;
   background-color: var(--main-white);
   position: fixed;
   top: 0;
@@ -9,8 +9,8 @@
 }
 
 .mobile-menu__content {
-  width: 100vw;
-  height: 100vw;
+  width: 100%;
+  height: 100%;
   z-index: 4;
   padding: 48px 40px;
   justify-content: space-around;
