--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -6,6 +6,7 @@
   position: fixed;
   top: 0;
   left: 0;
+  overflow: hidden;
 }
 
 .mobile-menu__content {
@@ -16,6 +17,7 @@
   justify-content: space-around;
   display: flex;
   flex-direction: column;
+  overflow: hidden;
 }
 
 .mobile-menu__open-button {
@@ -96,6 +98,7 @@
   display: flex;
   flex-direction: column;
   gap: 32px;
+  width: 100%;
   flex-wrap: wrap;
 }
 
@@ -117,6 +120,7 @@
   flex-direction: column;
   flex-wrap: wrap;
   gap: 32px;
+  width: 100%;
 }
 
 .mobile-menu-navigation__contact--email {
@@ -152,6 +156,7 @@
   padding-top: 64px;
   gap: 20px;
   flex-wrap: wrap;
+  width: 100%;
 }
 .mobile-menu-navigation__social-links--media {
   font-weight: 500;
