--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -11,14 +11,18 @@
   padding: 0;
 }
 
-@media screen and (min-width:1200px) {
+@media screen and (min-width: 1200px) {
   .header {
-  height: 80px;
-}
+    height: 80px;
+  }
 }
 
-@media screen and (min-width:768px) {
+@media screen and (min-width: 768px) {
   .header {
-  height: 80px;
-}
+    height: 80px;
+  }
+  .header__menu {
+    display: flex;
+    justify-content: space-between;
+  }
 }
