--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -117,6 +117,8 @@
     padding: 32px 0;
     margin: 0;
     gap: 30px;
+    display:flex;
+    flex-direction: row;
   }
 
   .menu__navigation--text {
@@ -174,7 +176,7 @@
 
   .menu__address--icon {
     width: 16px;
-    height: 12px;
+    height: 16px;
     padding-right: 10px;
     fill: var(--silver);
   }
