--- a/sass/components/_our-advantages.scss
+++ b/sass/components/_our-advantages.scss
@@ -1,18 +1,19 @@
 .our-advantages {
   display: flex;
   gap: 30px;
-  padding: 94px 0;
   list-style-type: none;
   justify-content: center;
   width: 100%;
+  padding: 60px 0px;
+  flex-wrap: wrap;
+  flex-direction: column;
 }
 
 .our-advantages__list {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   list-style-type: none;
   width: 100%;
-  flex-wrap: nowrap;
   justify-content: center;
   gap: 30px;
   padding: 0;
@@ -21,6 +22,11 @@
 .our-advantages__item {
   flex-wrap: wrap;
   justify-content: space-between;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  flex-wrap: wrap;
+  width: 100%;
 }
 
 .our-advantages__icons {
@@ -48,6 +54,7 @@
   letter-spacing: 0.03em;
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
 }
 
 .our-advantages__text {
@@ -59,47 +66,33 @@
   width: 100%;
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
+
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 1200px) {
   .our-advantages {
-    padding: 60px 0;
-    flex-wrap: wrap;
-    justify-content: center;
-    flex-direction: column;
-    max-width: 100%;
+    padding: 94px 0;
+    flex-direction: row;
   }
 
   .our-advantages__list {
-    flex-direction: column;
+    flex-direction: row;
     width: 100%;
     flex-wrap: wrap;
   }
 
   .our-advantages__item {
-    max-width: 100%;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    flex-wrap: wrap;
-  }
-
-  .our-advantages__icons {
-    width: 100%;
-    justify-content: center;
-    display: flex;
-    align-items: center;
+    width: calc((100% / 4) - 25px);
   }
 
   .our-advantages__headers {
-    text-align: center;
-    justify-content: center;
+    justify-content: left;
     flex-wrap: wrap;
   }
 
   .our-advantages__text {
     width: 100%;
-    text-align: center;
-    height: 50px;
+    text-align: left;
   }
 }
