--- a/sass/components/_our-team.scss
+++ b/sass/components/_our-team.scss
@@ -1,4 +1,3 @@
-
 .our-team-section {
   background-color: var(--second-white);
   display: flex;
@@ -17,7 +16,7 @@
 
 .our-team-section__photos {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   gap: 30px;
   margin: 0 auto;
   padding: 0;
@@ -31,6 +30,7 @@
   border: 1px solid rgba(238, 238, 238, 1);
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
+  width: 100%;
 }
 
 .our-team-section__photos--names {
@@ -84,9 +84,11 @@
   height: 20px;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 1200px) {
   .our-team-section {
     padding: 60px 0;
+    flex-direction: row;
+    flex-wrap: wrap;
   }
 
   .our-team-section__header {
@@ -96,19 +98,21 @@
   }
 
   .our-team-section__photos {
-    flex-direction: column;
+    flex-direction: row;
     width: 100%;
+    flex-wrap: wrap;
   }
   .our-team-section__photos--properties {
-    padding: 0px 20px;
-    height: 622px;
-    width: 100%;
+    width: calc((100% / 4) - 30px);
+    flex-wrap: wrap;
   }
 
   .our-team-section__icon-list {
     display: flex;
     flex-direction: row;
     gap: 10px;
+    flex-wrap: wrap;
+    padding-bottom: 24px;
   }
 
   .our-team-section__icons-properties {
