--- a/sass/components/_customers.scss
+++ b/sass/components/_customers.scss
@@ -1,14 +1,14 @@
 .customers-section {
-  padding: 94px 0;
+  padding: 60px 0;
 }
 
 .customers-section__header {
   font-weight: 700;
-  font-size: 36px;
   line-height: 1.17;
   text-align: center;
   margin: 0;
-  padding-bottom: 50px;
+  font-size: 28px;
+  padding-bottom: 30px;
 }
 
 .customers {
@@ -17,6 +17,7 @@
   gap: 30px;
   margin: 0 auto;
   padding: 0;
+  width: 100%;
 }
 .customers__list {
   display: flex;
@@ -24,9 +25,10 @@
   justify-content: center;
   align-items: center;
   border: 1px solid rgba(175, 177, 184, 1);
-  width: 100%;
   height: 92px;
   border-radius: 4px;
+  width: calc((100% / 2) - 17px);
+  flex-wrap: wrap;
 
   &:hover svg,
   &:focus svg {
@@ -47,13 +49,13 @@
   fill: var(--silver);
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 1200px) {
   .customers-section {
-    padding: 60px 0;
+    padding: 90px 0;
   }
   .customers-section__header {
-    font-size: 28px;
-    padding-bottom: 30px;
+    font-size: 36px;
+    padding-bottom: 50px;
   }
 
   .customers {
@@ -61,7 +63,6 @@
   }
 
   .customers__list {
-    flex-wrap: wrap;
-    width: calc(100% / 2);
+    width: calc((100% / 6) - 27px);
   }
 }
