--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,10 +1,14 @@
 .footer {
   background-color: var(--background);
-  flex-direction: row;
+  flex-direction: column;
   display: flex;
+  justify-content: center;
 }
 
 .footer__wrapper {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   padding: 60px 0;
   display: flex;
 }
@@ -12,8 +16,10 @@
 .footer__address {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 60px;
   padding: 0;
-  padding-bottom: 0px;
   font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
@@ -56,30 +62,26 @@
     cursor: pointer;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
+
+  .page-name__footer {
+    margin: 0 auto;
+  }
 }
 
-@media screen and (min-width: 480px) {
-  .page-name {
-    display: flex;
-    justify-content: center;
-    // width: 154px;
-    // padding: 0;
+@media screen and (min-width: 1200px) {
+  .page-name__footer {
+    justify-content: left;
+    padding-bottom: 0px;
   }
 
   .footer__wrapper {
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    flex-direction: row;
+    justify-content: left;
   }
 
   .footer__address {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding-bottom: 60px;
-  }
-  .page-name__footer {
-    margin: 0 auto;
+    padding-bottom: 0px;
+    justify-content: left;
+    align-items: flex-start;
   }
 }
