--- a/sass/components/_social-links.scss
+++ b/sass/components/_social-links.scss
@@ -1,7 +1,8 @@
 .social-links {
-  width: 206px;
-  height: 80px;
-  margin-left: 70px;
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  margin: 0;
 }
 
 .social-links__header {
@@ -9,9 +10,11 @@
   font-size: 14px;
   text-decoration: none;
   line-height: 1.17;
-  margin-bottom: 20px;
-  justify-content: left;
-  margin-top: 12px;
+  justify-content: center;
+  display: flex;
+  margin: 0 auto;
+  padding: 0;
+  padding-top: 60px;
 }
 
 .social-links__icon-list {
@@ -29,6 +32,8 @@
   border-radius: 50%;
   background: rgba(255, 255, 255, 0.1);
   margin-right: 10px;
+  flex-direction: row;
+  padding: 0;
 
   &:hover,
   &:focus {
@@ -46,25 +51,15 @@
   );
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 1200px) {
   .social-links {
-    height: 44px;
-    justify-content: center;
-    display: flex;
-    flex-direction: column;
-    margin: 0;
+    margin-left: 70px;
   }
 
   .social-links__header {
-    justify-content: center;
-    display: flex;
-    margin: 0 auto;
+    justify-content: flex-start;
+    margin-top: 12px;
     padding: 0;
-  }
-
-  .social-links__icon-list {
-    display: flex;
-    flex-direction: row;
-    padding: 0;
+    margin-left: 0;
   }
 }
