--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -76,7 +76,8 @@
 
   .footer__wrapper {
     flex-direction: row;
-    justify-content: left;
+    justify-content: space-between;
+
   }
 
   .footer__address {
