--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -3,14 +3,17 @@
   flex-direction: column;
   display: flex;
   justify-content: center;
+  width: 100%;
 }
 
 .footer__wrapper {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 60px 0;
+  margin: 60px 0;
   display: flex;
+  padding-left: 215px;
+  padding-right: 215px;
 }
 
 .footer__address {
@@ -65,10 +68,13 @@
 
   .page-name__footer {
     margin: 0 auto;
+    display: flex;
+    justify-content: center;
   }
 }
 
 @media screen and (min-width: 1200px) {
+  
   .page-name__footer {
     justify-content: left;
     padding-bottom: 0px;
@@ -77,7 +83,6 @@
   .footer__wrapper {
     flex-direction: row;
     justify-content: space-between;
-
   }
 
   .footer__address {
