--- a/sass/components/_newsletter.scss
+++ b/sass/components/_newsletter.scss
@@ -26,7 +26,8 @@
 
 .newsletter__input {
   display: flex;
-  flex-basis: (100% / 2);
+  width: 100%;
+  height: 50px;
   border-radius: 4px;
   border-color: rgba(255, 255, 255, 0.3);
   background-color: transparent;
@@ -79,7 +80,7 @@
 
 @media screen and (min-width: 1200px) {
   .newsletter {
-    margin-top: 10px;
+    padding: 0;
   }
 
   .newsletter__form {
@@ -95,13 +96,17 @@
     justify-content: center;
     height: 50px;
     margin: 0 auto;
-    width: 450px;
+    width: 358px;
   }
 
   .mobile-newsletter_button {
     display: flex;
-    padding-top: 20px;
+    padding-left: 15px;
     margin: 0 auto;
-    padding-bottom: 60px;
+  }
+
+  .newsletter__header {
+    width: 100%;
+    justify-content: left;
   }
 }
