--- a/sass/components/_our-team.scss
+++ b/sass/components/_our-team.scss
@@ -21,6 +21,8 @@
   margin: 0 auto;
   padding: 0;
   list-style-type: none;
+  width: 100%;
+  margin: 0 auto;
 }
 .our-team-section__photos--properties {
   background-color: var(--main-white);
@@ -47,12 +49,15 @@
   line-height: 1.17;
   text-align: Center;
   color: var(--silver);
+  width: 100%;
 }
 
 .our-team-section__icon-list {
   display: flex;
   flex-direction: row;
   gap: 10px;
+  justify-content: center;
+  padding-bottom: 30px;
 }
 
 .our-team-section__icons {
@@ -82,6 +87,29 @@
   fill: var(--icons);
   width: 20px;
   height: 20px;
+}
+
+.our-team__images {
+  width: 100%;
+  height: auto;
+}
+
+@media screen and (min-width: 768px) {
+  .our-team-section {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  .our-team-section__photos {
+    flex-direction: row;
+    width: 100%;
+    flex-wrap: wrap;
+  }
+
+  .our-team-section__photos--properties {
+    width: calc((100% / 2) - 20px);
+    flex-wrap: wrap;
+  }
 }
 
 @media screen and (min-width: 1200px) {
