--- a/sass/components/_newsletter.scss
+++ b/sass/components/_newsletter.scss
@@ -33,6 +33,7 @@
   background-color: transparent;
   color: var(--main-white);
   outline: none;
+  margin-bottom: 20px;
 
   & ::placeholder {
     color: rgba(255, 255, 255, 0.6);
