--- a/sass/components/_customers.scss
+++ b/sass/components/_customers.scss
@@ -15,10 +15,10 @@
   display: flex;
   flex-direction: row;
   gap: 10px;
-  margin: 0 auto;
   padding: 0;
   justify-content: space-around;
   flex-wrap: wrap;
+  width: calc(100% - 30px);
 }
 .customers__list {
   display: flex;
@@ -28,7 +28,6 @@
   border: 1px solid rgba(175, 177, 184, 1);
   height: 92px;
   border-radius: 4px;
-  width: 100%;
   flex-wrap: wrap;
   width: calc((100% - 30px) / 2);
 
