--- a/sass/components/_our-advantages.scss
+++ b/sass/components/_our-advantages.scss
@@ -1,6 +1,5 @@
 .our-advantages {
   display: flex;
-  gap: 30px;
   list-style-type: none;
   justify-content: center;
   width: 100%;
@@ -13,7 +12,7 @@
   display: flex;
   flex-direction: column;
   list-style-type: none;
-  width: 100%;
+  width: calc(100% - 30px);
   justify-content: center;
   gap: 30px;
   padding: 0;
