--- a/sass/components/_our-team.scss
+++ b/sass/components/_our-team.scss
@@ -32,7 +32,7 @@
   border: 1px solid rgba(238, 238, 238, 1);
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
-  width: 100%;
+  width: calc(100% - 30px);
 }
 
 .our-team-section__photos--names {
