--- a/sass/components/_image-section.scss
+++ b/sass/components/_image-section.scss
@@ -4,11 +4,26 @@
   display: flex;
   flex-direction: column;
   background: linear-gradient(
-      90deg,
+      0deg,
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
-    ), url(../images/background-photo.jpg);
+    ),
+    url(../images/bg-mob@1x.jpg);
   background-size: cover;
+}
+
+@media (min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+  .image-section {
+    background-image: linear-gradient(
+        0deg,
+        rgba(48, 49, 59, 0.4) 0%,
+        rgba(48, 49, 59, 0.4) 100%
+      ),
+      url(../images/bg-mob@2x.jpg);
+      background-size: cover;
+  }
 }
 
 .image-section__text {
