--- a/sass/components/_customers.scss
+++ b/sass/components/_customers.scss
@@ -19,6 +19,7 @@
   justify-content: space-around;
   flex-wrap: wrap;
   width: calc(100% - 30px);
+  margin-right: 0;
 }
 .customers__list {
   display: flex;
@@ -30,6 +31,8 @@
   border-radius: 4px;
   flex-wrap: wrap;
   width: calc((100% - 30px) / 2);
+  padding-right: 0;
+  margin-right: 0;
 
   &:hover svg,
   &:focus svg {
