--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -23,7 +23,6 @@
     text-decoration: none;
     line-height: 1.17;
     letter-spacing: 0.02em;
-    
   }
 
   .menu__address {
@@ -31,7 +30,8 @@
     margin: 0;
     display: flex;
     flex-direction: column;
-    
+    justify-content: left;
+    align-items: flex-start;
   }
 
   .menu__navigation--text {
