--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -10,8 +10,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 60px 0;
   display: flex;
+  flex-wrap: wrap;
 }
 
 .footer__address {
@@ -69,19 +69,25 @@
     display: flex;
     justify-content: center;
   }
+  .footer__wrapper--properties {
+    display: none;
+  }
 }
 
 @media screen and (min-width: 768px) {
   .page-name__footer {
     padding-bottom: 0px;
   }
-  .footer__wrapper {
-    padding-left: 100px;
+  .footer__container {
     display: flex;
     justify-content: space-around;
     align-items: baseline;
     flex-wrap: wrap;
   }
+.footer__wrapper--properties {
+  display: flex;
+  flex-direction: row;
+}
 
   .footer__menu {
     margin-top: 0;
@@ -101,11 +107,11 @@
     padding-bottom: 0px;
   }
 
-  .footer__wrapper {
+  .footer__container {
     flex-direction: row;
     justify-content: space-between;
-    padding-left: 215px;
-    padding-right: 215px;
+    padding: 0 15px;
+    flex-wrap: nowrap;
   }
 
   .footer__address {
