--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -6,6 +6,10 @@
   width: 100%;
 }
 
+.footer__container {
+  padding: 0;
+}
+
 .footer__wrapper {
   flex-direction: column;
   justify-content: center;
@@ -75,10 +79,10 @@
 }
 
 @media screen and (min-width: 768px) {
-.footer {
-  padding: 60px 0;
-  max-width: 100%;
-}
+  .footer {
+    padding: 60px 0;
+    max-width: 100%;
+  }
   .page-name__footer {
   }
   .footer__container {
@@ -87,10 +91,10 @@
     align-items: baseline;
     flex-wrap: wrap;
   }
-.footer__wrapper--properties {
-  display: flex;
-  flex-direction: row;
-}
+  .footer__wrapper--properties {
+    display: flex;
+    flex-direction: row;
+  }
 
   .footer__menu {
     margin-top: 0;
