--- a/sass/components/_our-team.scss
+++ b/sass/components/_our-team.scss
@@ -5,6 +5,11 @@
   padding: 94px 0;
 }
 
+.our-team__container {
+  padding: 0;
+
+}
+
 .our-team-section__header {
   font-weight: 700;
   font-size: 36px;
