--- a/sass/components/_our-advantages.scss
+++ b/sass/components/_our-advantages.scss
@@ -2,7 +2,7 @@
   display: flex;
   list-style-type: none;
   justify-content: center;
-  width: 100%;
+  width: calc(100% - 30px);
   padding: 60px 0px;
   flex-wrap: wrap;
   flex-direction: column;
