--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -90,6 +90,7 @@
     justify-content: space-around;
     align-items: baseline;
     flex-wrap: wrap;
+    padding: 0 15px;
   }
   .footer__wrapper--properties {
     display: flex;
@@ -109,6 +110,10 @@
 }
 
 @media screen and (min-width: 1200px) {
+.footer {
+  padding-left: 100px;
+}
+
   .page-name__footer {
     justify-content: left;
     padding-bottom: 0px;
