--- a/sass/components/_our-team.scss
+++ b/sass/components/_our-team.scss
@@ -62,6 +62,8 @@
   gap: 10px;
   justify-content: center;
   padding-bottom: 30px;
+  padding: 0;
+
 }
 
 .our-team-section__icons {
@@ -71,6 +73,7 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  
 
   &:hover,
   &:focus {
