--- a/sass/components/_newsletter.scss
+++ b/sass/components/_newsletter.scss
@@ -26,7 +26,7 @@
 
 .newsletter__input {
   display: flex;
-  width: 100%;
+  width: 450px;
   height: 50px;
   border-radius: 4px;
   border-color: rgba(255, 255, 255, 0.3);
@@ -61,6 +61,7 @@
   padding: 0;
   display: flex;
   justify-content: center;
+  margin: 0 auto;
 }
 
 .newsletter__button--text {
@@ -86,6 +87,7 @@
   .newsletter {
     margin: 0 auto;
   }
+
    .newsletter__button {
       justify-content: center;
       margin: 0 auto;  
