--- a/sass/components/_our-team.scss
+++ b/sass/components/_our-team.scss
@@ -117,6 +117,10 @@
     width: calc((100% / 2) - 20px);
     flex-wrap: wrap;
   }
+
+  .our-team-section__icon-list {
+    padding-bottom: 40px;
+  }
 }
 
 @media screen and (min-width: 1200px) {
